2011-02-27  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Support LineStyle=dashdotted in make-plots

	* New command line option --style for compare-histos. Options are
	"default", "bw" and "talk".

	* cleaner uninstall

2011-02-26  Andy Buckley  <andy@insectnation.org>

	* Changing internal storage and return type of Particle::pdgId()
	to PdgId, and adding Particle::energy().

	* Renaming Analysis::energies() as Analysis::requiredEnergies().

	* Adding beam energies into beam consistency checking:
	Analysis::isCompatible methods now also require the beam energies
	to be provided.

	* Removing long-deprecated AnalysisHandler::init() constructor and
	AnalysisHandler::removeIncompatibleAnalyses() methods.

2011-02-25  Andy Buckley  <andy@insectnation.org>

	* Adding --disable-obsolete, which takes its value from the value
	of --disable-preliminary by default.

	* Replacing RivetUnvalidated and RivetPreliminary plugin libraries
	with optionally-configured analysis contents in the
	experiment-specific plugin libraries. This avoids issues with
	making libraries rebuild consistently when sources were reassigned
	between libraries.

2011-02-24  Andy Buckley  <andy@insectnation.org>

	* Changing analysis plugin registration to fall back through
	available paths rather than have RIVET_ANALYSIS_PATH totally
	override the built-in paths. The first analysis hook of a given
	name to be found is now the one that's used: any duplicates found
	will be warned about but unused. getAnalysisLibPaths() now returns
	*all* the search paths, in keeping with the new search behaviour.

2011-02-22  Andy Buckley  <andy@insectnation.org>

	* Moving the definition of the MSG_* macros into the Logging.hh
	header. They can't be used everywhere, though, as they depend on
	the existence of a this->getLog() method in the call scope. This
	move makes them available in e.g. AnalysisHandler and other bits
	of framework other than projections and analyses.
